build(client): added dependencies for testing

--- a/client/package.json
+++ b/client/package.json
@@ -40,12 +40,15 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.0.0",
+    "@testing-library/react": "^8.0.7",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.13.0",
     "lint-staged": "^8.1.6",
-    "prettier": "^1.17.0"
+    "prettier": "^1.17.0",
+    "react-test-renderer": "^16.8.6"
   },
   "husky": {
     "hooks": {
